# Local-executive-assistant-agent

./: .env.cpu.example  .env.example  .env.gpu.example  .env.research.example  .gitignore  Makefile  README.md  docker-compose.fastcrw.yml  pyproject.toml
app/evals/: __init__.py  runner.py
app/graph/: __init__.py  builder.py  nodes.py  state.py
app/memory/: long_term.py  vector_store.py
app/models/: llm.py  registry.py
app/tools/: docx.py  filesystem.py  image.py  pdf.py  shell.py  web_fastcrw.py
docs/: ARCHITECTURE.md  terminal-examples.md
docs/samples/: board-prep-notes.md  travel-policy.txt
scripts/: dev_make.py
src/exec_agent/: __init__.py  __main__.py  chat.py  cli.py  config.py  logging.py  safety.py  services.py  sessions.py  tasks.py  web.py  web_cli.py
src/exec_agent/models/: llm.py
src/exec_agent/static/: web.css  web.js
tests/: test_chat.py  test_cli.py  test_config.py  test_docx.py  test_evals.py  test_filesystem.py  test_graph.py  test_image.py  test_llm.py  test_pdf.py  test_services.py  test_shell.py  test_tasks.py  test_vector_store.py  test_web_fastcrw.py  test_web_security.py
