[project]
name = "local-executive-assistant-agent"
version = "0.1.0"
description = "Terminal-based local-first AI executive assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.4.0",
    "rich>=13.7.1",
    "langgraph>=0.2.0",
    "typer>=0.12.3",
    "transformers>=4.53.0",
    "torch>=2.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.3.0",
    "python-docx>=1.1.2",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
exec-agent = "exec_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/exec_agent", "app"]
